Update recurring events to allow user-defined duration